# sentential-logic

./: .gitignore  CMakeLists.txt  README.md
include/: iterator.h
src/: iterator.c  main.c
